Mnogobrojne ispravke i poboljsanja. Ispravan format za sve datume na sajtu. Resen x-overflow kod zadataka. Resen bug sa dubliranjem zadataka prilikom izmene postojeceg roka. Resen bug: pucanje aplikacije kada korisnik ne odabere nijedan smer prilikom unosa novog roka. Korisnicima koji pretrazuju rokove su sada samo ponudjeni predmeti za koji postoji rok.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -326,6 +326,10 @@ button {
   margin: 2em 0;
 }
 
+.problem {
+  overflow-x: auto
+}
+
 .problem + .problem{
   margin-top: 1em;
 }
